feat: add i18n for error msgs (#559)

--- a/src/renderer/i18n/locales/zh-Hans/translation.json
+++ b/src/renderer/i18n/locales/zh-Hans/translation.json
@@ -127,6 +127,7 @@
   "Chat Settings": "对话设置",
   "Chatbox AI Advanced Model Quota": "Chatbox AI 高级模型配额",
   "Chatbox AI Cloud": "Chatbox AI 云",
+  "Chatbox AI document parsing failed. Please try again later.": "Chatbox AI 文档解析失败。请稍后再试。",
   "Chatbox AI free trial available": "Chatbox AI 免费试用现已开启",
   "Chatbox AI Image Quota": "Chatbox AI 图片剩余额度",
   "Chatbox AI License": "Chatbox AI 许可证",
@@ -276,6 +277,7 @@
   "Display Settings": "显示设置",
   "Document Parser": "文档解析器",
   "Document parser reset to default due to unverified MinerU token": "文档解析器因 MinerU token 未验证已恢复默认设置。",
+  "Document parsing failed. You can go to <OpenDocumentParserSettingButton>Settings</OpenDocumentParserSettingButton> and switch to Chatbox AI for cloud-based document parsing.": "文档解析失败。您可以前往 <OpenDocumentParserSettingButton>设置</OpenDocumentParserSettingButton> 并切换到 Chatbox AI 使用云端文档解析。",
   "Documents": "文档",
   "Donate": "捐赠",
   "Done": "完成",
@@ -473,6 +475,7 @@
   "Loading...": "加载中...",
   "Local": "内置解析",
   "Local (stdio)": "本地 (stdio)",
+  "Local document parsing failed. You can go to <OpenDocumentParserSettingButton>Settings</OpenDocumentParserSettingButton> and switch to Chatbox AI for cloud-based document parsing.": "本地文档解析失败。您可以前往 <OpenDocumentParserSettingButton>设置</OpenDocumentParserSettingButton> 切换到 Chatbox AI 使用云端文档解析。",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "本地文件处理失败。您可以升级您的套餐以使用 Chatbox AI 的高级文件处理功能。",
   "Local Mode": "本地模式",
   "Local parse failed": "本地解析失败",
@@ -510,6 +513,7 @@
   "meticulous": "严谨细致",
   "MIME Type": "MIME 类型",
   "MinerU API Token": "MinerU API 密钥",
+  "MinerU API token is required. Please go to <OpenDocumentParserSettingButton>Settings</OpenDocumentParserSettingButton> and configure your MinerU API token.": "需要 MinerU API token。请前往 <OpenDocumentParserSettingButton>设置</OpenDocumentParserSettingButton> 并配置您的 MinerU API token。",
   "MinerU parse failed": "MinerU 解析失败",
   "Minimize": "最小化",
   "Misleading information": "误导信息",
@@ -717,6 +721,7 @@
   "Select Model": "选择模型",
   "Select Test Model": "选择测试模型",
   "Select the Current Option (in search dialog)": "选择当前选项（在搜索弹窗中）",
+  "Selected document parser is currently only supported in Knowledge Base. For chat file attachments, please go to <OpenDocumentParserSettingButton>Settings</OpenDocumentParserSettingButton> and switch to Local or Chatbox AI.": "所选的文档解析器目前仅在知识库中支持。对于对话中的文件附件，请前往 <OpenDocumentParserSettingButton>设置</OpenDocumentParserSettingButton> 并切换至本地或 Chatbox AI。",
   "Selected Key": "选择的许可证",
   "send": "发送",
   "Send": "发送",
@@ -828,6 +833,7 @@
   "Thinking Effort only works for OpenAI o-series models": "思考仅适用于 OpenAI o 系列模型",
   "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "第三方云解析服务，支持 PDF 和大多数 Office 文件。需要 API token。",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "此操作无法撤销。所有文档及其嵌入将被永久删除。",
+  "This file type requires a document parser. Please go to <OpenDocumentParserSettingButton>Settings</OpenDocumentParserSettingButton> and enable Chatbox AI document parsing.": "此文件类型需要文档解析器。请前往 <OpenDocumentParserSettingButton>设置</OpenDocumentParserSettingButton> 并启用 Chatbox AI 文档解析。",
   "This image session is no longer active. Please use the new Image Creator for image generation.": "此图片会话已失效。请使用新的图片生成器进行图片生成。",
   "This license key has reached the activation limit": "此 license key 已达到激活上限",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "此 license 已达到激活上限，<a>点击这里</a>管理 license 与设备来取消激活旧设备。",
