--- a/src/renderer/i18n/locales/zh-Hant/translation.json
+++ b/src/renderer/i18n/locales/zh-Hant/translation.json
@@ -126,6 +126,7 @@
   "Chat Settings": "對話設定",
   "Chatbox AI Advanced Model Quota": "Chatbox AI 高級模型配額",
   "Chatbox AI Cloud": "Chatbox AI 雲端",
+  "Chatbox AI document parsing failed. Please try again later.": "Chatbox AI 文件解析失敗。請稍後再試。",
   "Chatbox AI free trial available": "Chatbox AI 提供免費試用",
   "Chatbox AI Image Quota": "Chatbox AI 圖片餘額",
   "Chatbox AI License": "Chatbox AI 授權",
@@ -274,6 +275,7 @@
   "Display Settings": "顯示設定",
   "Document Parser": "文件解析器",
   "Document parser reset to default due to unverified MinerU token": "文件解析器因 MinerU 令牌未驗證而重設為預設值",
+  "Document parsing failed. You can go to <OpenDocumentParserSettingButton>Settings</OpenDocumentParserSettingButton> and switch to Chatbox AI for cloud-based document parsing.": "文件解析失敗。您可以前往 <OpenDocumentParserSettingButton>設定</OpenDocumentParserSettingButton> 並切換至 Chatbox AI 以使用雲端文件解析服務。",
   "Documents": "文件",
   "Donate": "捐贈",
   "Done": "完成",
@@ -470,6 +472,7 @@
   "Loading...": "載入中...",
   "Local": "本機",
   "Local (stdio)": "本機 (stdio)",
+  "Local document parsing failed. You can go to <OpenDocumentParserSettingButton>Settings</OpenDocumentParserSettingButton> and switch to Chatbox AI for cloud-based document parsing.": "本地文件解析失敗。您可以前往 <OpenDocumentParserSettingButton>設定</OpenDocumentParserSettingButton> 並切換至 Chatbox AI 以進行雲端文件解析。",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "本機檔案處理失敗。您可以升級您的方案以使用 Chatbox AI 的進階檔案處理功能。",
   "Local Mode": "本地模式",
   "Local parse failed": "本地解析失敗",
@@ -507,6 +510,7 @@
   "meticulous": "嚴謹細緻",
   "MIME Type": "MIME 類型",
   "MinerU API Token": "MinerU API 憑證",
+  "MinerU API token is required. Please go to <OpenDocumentParserSettingButton>Settings</OpenDocumentParserSettingButton> and configure your MinerU API token.": "需要 MinerU API token。請前往 <OpenDocumentParserSettingButton>設定</OpenDocumentParserSettingButton> 並配置您的 MinerU API token。",
   "MinerU parse failed": "MinerU 解析失敗",
   "Minimize": "最小化",
   "Misleading information": "誤導信息",
@@ -712,6 +716,7 @@
   "Select Model": "選擇模型",
   "Select Test Model": "選擇測試模型",
   "Select the Current Option (in search dialog)": "選擇當前選項（在搜尋對話框中）",
+  "Selected document parser is currently only supported in Knowledge Base. For chat file attachments, please go to <OpenDocumentParserSettingButton>Settings</OpenDocumentParserSettingButton> and switch to Local or Chatbox AI.": "所選的文件解析器目前僅支援知識庫。若要處理對話中的檔案附件，請前往 <OpenDocumentParserSettingButton>設定</OpenDocumentParserSettingButton> 並切換至「本地」或 Chatbox AI。",
   "Selected Key": "選擇的許可證",
   "send": "傳送",
   "Send": "發送",
@@ -820,6 +825,7 @@
   "Thinking Effort only works for OpenAI o-series models": "思考程度僅適用於 OpenAI o-series 模型",
   "Third-party cloud parsing service, supports PDF and most Office files. Requires API token.": "第三方雲端解析服務，支援 PDF 和大部分 Office 檔案。需要 API 權杖。",
   "This action cannot be undone. All documents and their embeddings will be permanently deleted.": "此動作無法復原。所有文件及其嵌入將被永久刪除。",
+  "This file type requires a document parser. Please go to <OpenDocumentParserSettingButton>Settings</OpenDocumentParserSettingButton> and enable Chatbox AI document parsing.": "此檔案類型需要文件解析器。請前往 <OpenDocumentParserSettingButton>設定</OpenDocumentParserSettingButton> 並啟用 Chatbox AI 文件解析。",
   "This image session is no longer active. Please use the new Image Creator for image generation.": "此圖片對話已不再有效。請使用新的 Image Creator 進行圖片生成。",
   "This license key has reached the activation limit": "此 license key 已達到啟用上限",
   "This license key has reached the activation limit, <a>click here</a> to manage license and devices to deactivate old devices.": "此 license 授權密鑰已達到啟用限制，<a>點擊這裡</a>管理授權與設備以停用舊設備。",
