feat: implement log export and management features across platforms (#478)

--- a/src/renderer/i18n/locales/de/translation.json
+++ b/src/renderer/i18n/locales/de/translation.json
@@ -26,6 +26,7 @@
   "Add your first MCP server": "Ihren ersten MCP-Server hinzufügen",
   "advanced": "Erweitert",
   "Advanced": "Erweitert",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "Erweiterte Bildformate werden nicht unterstützt. Bitte konvertieren Sie zu JPG oder PNG.",
   "Advanced Mode": "Erweiterter Modus",
   "Advanced Settings": "Erweiterte Einstellungen",
   "AI Model Provider": "KI-Modell Anbieter",
@@ -54,7 +55,6 @@
   "API Mode": "API-Modus",
   "api path": "API-Pfad",
   "API Path": "API Pfad",
-  "Advanced image formats are not supported. Please convert to JPG or PNG.": "Erweiterte Bildformate werden nicht unterstützt. Bitte konvertieren Sie zu JPG oder PNG.",
   "Archive files are not supported. Please extract and upload individual files.": "Archivdateien werden nicht unterstützt. Bitte extrahieren Sie die Dateien und laden Sie sie einzeln hoch.",
   "Are you sure you want to delete the knowledge base": "Möchten Sie die Wissensdatenbank wirklich löschen?",
   "Are you sure you want to delete this server?": "Sind Sie sicher, dass Sie diesen Server löschen möchten?",
@@ -211,6 +211,7 @@
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "HTML-Inhalt auf EdgeOne Pages bereitstellen und eine zugängliche öffentliche URL erhalten.",
   "Description": "Beschreibung",
   "Details": "Details",
+  "Diagnostic Logs": "Diagnoseprotokolle",
   "Disabled": "Deaktiviert",
   "display": "Anzeige",
   "Display": "Anzeigen",
@@ -259,7 +260,10 @@
   "Explore (community)": "Erkunden (Community)",
   "Explore (official)": "Erkunden (offiziell)",
   "export": "Exportieren",
+  "Export application logs for troubleshooting. These logs may be requested by support to help diagnose issues.": "Anwendungsprotokolle zur Fehlerbehebung exportieren. Diese Protokolle können vom Support angefordert werden, um bei der Diagnose von Problemen zu helfen.",
   "Export Chat": "Chat exportieren",
+  "Export failed": "Export fehlgeschlagen",
+  "Export Logs": "Exportiere Protokolle",
   "Export Selected Data": "Ausgewählte Daten exportieren",
   "Exporting...": "Wird exportiert...",
   "Exports are for viewing only. Use Settings → Backup if you need a backup you can restore.": "Exporte sind nur zur Ansicht. Verwenden Sie Einstellungen → Sicherung, wenn Sie eine wiederherstellbare Sicherung benötigen.",
