--- a/src/renderer/i18n/locales/en/translation.json
+++ b/src/renderer/i18n/locales/en/translation.json
@@ -20,6 +20,7 @@
   "Add provider": "Add provider",
   "Add Server": "Add Server",
   "Add your first MCP server": "Add your first MCP server",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "Advanced image formats are not supported. Please convert to JPG or PNG.",
   "Advanced Mode": "Advanced Mode",
   "Advanced Settings": "Advanced Settings",
   "ai provider no implemented paint tips": "The current AI model provider({{aiProvider}}) does not support painting capabilities at this time. Currently, only Chatbox AI, OpenAI and Azure OpenAI offer this feature. If needed, please <0>go to settings</0> and switch the AI model provider.",
@@ -38,7 +39,6 @@
   "API Key is required to check connection": "API Key is required to check connection",
   "API Mode": "API Mode",
   "API Path": "API Path",
-  "Advanced image formats are not supported. Please convert to JPG or PNG.": "Advanced image formats are not supported. Please convert to JPG or PNG.",
   "Archive files are not supported. Please extract and upload individual files.": "Archive files are not supported. Please extract and upload individual files.",
   "Are you sure you want to delete the knowledge base": "Are you sure you want to delete the knowledge base",
   "Are you sure you want to delete this server?": "Are you sure you want to delete this server?",
@@ -175,6 +175,7 @@
   "Delete Knowledge Base": "Delete Knowledge Base",
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.",
   "Details": "Details",
+  "Diagnostic Logs": "Diagnostic Logs",
   "Disabled": "Disabled",
   "Display": "Display",
   "Display Settings": "Display Settings",
@@ -212,7 +213,10 @@
   "Explore (community)": "Explore (community)",
   "Explore (official)": "Explore (official)",
   "export": "export",
+  "Export application logs for troubleshooting. These logs may be requested by support to help diagnose issues.": "Export application logs for troubleshooting. These logs may be requested by support to help diagnose issues.",
   "Export Chat": "Export Chat",
+  "Export failed": "Export failed",
+  "Export Logs": "Export Logs",
   "Export Selected Data": "Export Selected Data",
   "Exporting...": "Exporting...",
   "Exports are for viewing only. Use Settings → Backup if you need a backup you can restore.": "Exports are for viewing only. Use Settings → Backup if you need a backup you can restore.",
