--- a/src/renderer/i18n/locales/it-IT/translation.json
+++ b/src/renderer/i18n/locales/it-IT/translation.json
@@ -26,6 +26,7 @@
   "Add your first MCP server": "Aggiungi il tuo primo server MCP",
   "advanced": "Avanzate",
   "Advanced": "Avanzato",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "I formati immagine avanzati non sono supportati. Si prega di convertire in JPG o PNG.",
   "Advanced Mode": "Modalità avanzata",
   "Advanced Settings": "Impostazioni Avanzate",
   "AI Model Provider": "Fornitore del modello AI",
@@ -54,7 +55,6 @@
   "API Mode": "Modalità API",
   "api path": "Percorso API",
   "API Path": "Percorso API",
-  "Advanced image formats are not supported. Please convert to JPG or PNG.": "I formati immagine avanzati non sono supportati. Si prega di convertire in JPG o PNG.",
   "Archive files are not supported. Please extract and upload individual files.": "I file di archivio non sono supportati. Si prega di estrarre e caricare i singoli file.",
   "Are you sure you want to delete the knowledge base": "Vuoi davvero eliminare la base di conoscenza",
   "Are you sure you want to delete this server?": "Sei sicuro di voler eliminare questo server?",
@@ -210,6 +210,7 @@
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "Distribuire contenuto HTML su EdgeOne Pages e ottenere un URL pubblico accessibile.",
   "Description": "Descrizione",
   "Details": "Dettagli",
+  "Diagnostic Logs": "Registri diagnostici",
   "Disabled": "Disabilitato",
   "display": "visualizza",
   "Display": "Visualizza",
@@ -258,7 +259,10 @@
   "Explore (community)": "Esplora (comunità)",
   "Explore (official)": "Esplora (ufficiale)",
   "export": "Esporta",
+  "Export application logs for troubleshooting. These logs may be requested by support to help diagnose issues.": "Esporta i log dell'applicazione per la risoluzione dei problemi. Questi log potrebbero essere richiesti dal supporto per diagnosticare i problemi.",
   "Export Chat": "Esporta chat",
+  "Export failed": "Riuscirà a esportare",
+  "Export Logs": "Esporta log",
   "Export Selected Data": "Esporta dati selezionati",
   "Exporting...": "Esportazione...",
   "Exports are for viewing only. Use Settings → Backup if you need a backup you can restore.": "Le esportazioni sono solo a scopo di visualizzazione. Usa Impostazioni → Backup se hai bisogno di un backup che puoi ripristinare.",
