--- a/src/renderer/i18n/locales/ko/translation.json
+++ b/src/renderer/i18n/locales/ko/translation.json
@@ -26,6 +26,7 @@
   "Add your first MCP server": "첫 번째 MCP 서버를 추가하세요",
   "advanced": "고급",
   "Advanced": "고급",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "고급 이미지 형식은 지원되지 않습니다. JPG 또는 PNG로 변환해 주세요.",
   "Advanced Mode": "고급 모드",
   "Advanced Settings": "고급 설정",
   "AI Model Provider": "AI 모델 공급자",
@@ -54,7 +55,6 @@
   "API Mode": "API 모드",
   "api path": "API 경로",
   "API Path": "API 경로",
-  "Advanced image formats are not supported. Please convert to JPG or PNG.": "고급 이미지 형식은 지원되지 않습니다. JPG 또는 PNG로 변환해 주세요.",
   "Archive files are not supported. Please extract and upload individual files.": "압축 파일은 지원되지 않습니다. 개별 파일을 추출하여 업로드해 주세요.",
   "Are you sure you want to delete the knowledge base": "지식 기반을 정말 삭제하시겠습니까?",
   "Are you sure you want to delete this server?": "정말로 이 서버를 삭제하시겠습니까?",
@@ -211,6 +211,7 @@
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "HTML 콘텐츠를 EdgeOne Pages에 배포하고 접근 가능한 공개 URL을 획득합니다.",
   "Description": "설명",
   "Details": "세부 정보",
+  "Diagnostic Logs": "진단 로그",
   "Disabled": "비활성화됨",
   "display": "표시",
   "Display": "표시",
@@ -259,7 +260,10 @@
   "Explore (community)": "탐색 (커뮤니티)",
   "Explore (official)": "탐색 (공식)",
   "export": "내보내기",
+  "Export application logs for troubleshooting. These logs may be requested by support to help diagnose issues.": "문제 해결을 위해 애플리케이션 로그를 내보냅니다. 이 로그는 문제 진단을 돕기 위해 지원팀에서 요청할 수 있습니다.",
   "Export Chat": "채팅 내보내기",
+  "Export failed": "내보내기 실패",
+  "Export Logs": "로그 내보내기",
   "Export Selected Data": "선택한 데이터 내보내기",
   "Exporting...": "내보내는 중...",
   "Exports are for viewing only. Use Settings → Backup if you need a backup you can restore.": "내보낸 파일은 보기 전용입니다. 복원 가능한 백업이 필요하면 설정 → 백업을 사용하세요.",
