--- a/src/renderer/i18n/locales/ru/translation.json
+++ b/src/renderer/i18n/locales/ru/translation.json
@@ -26,6 +26,7 @@
   "Add your first MCP server": "Добавить ваш первый MCP сервер",
   "advanced": "Расширенные",
   "Advanced": "Расширенный",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "Расширенные форматы изображений не поддерживаются. Пожалуйста, конвертируйте в JPG или PNG.",
   "Advanced Mode": "Расширенный режим",
   "Advanced Settings": "Расширенные настройки",
   "AI Model Provider": "Поставщик модели AI",
@@ -54,7 +55,6 @@
   "API Mode": "Режим API",
   "api path": "путь API",
   "API Path": "Путь API",
-  "Advanced image formats are not supported. Please convert to JPG or PNG.": "Расширенные форматы изображений не поддерживаются. Пожалуйста, конвертируйте в JPG или PNG.",
   "Archive files are not supported. Please extract and upload individual files.": "Архивные файлы не поддерживаются. Пожалуйста, извлеките и загрузите отдельные файлы.",
   "Are you sure you want to delete the knowledge base": "Вы уверены, что хотите удалить базу знаний",
   "Are you sure you want to delete this server?": "Вы уверены, что хотите удалить этот сервер?",
@@ -211,6 +211,7 @@
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "Развертывание HTML-контента на EdgeOne Pages и получение доступного публичного URL.",
   "Description": "Описание",
   "Details": "Детали",
+  "Diagnostic Logs": "Диагностические журналы",
   "Disabled": "Отключено",
   "display": "дисплей",
   "Display": "Отображение",
@@ -259,7 +260,10 @@
   "Explore (community)": "Исследовать (сообщество)",
   "Explore (official)": "Исследовать (официальный)",
   "export": "Экспорт",
+  "Export application logs for troubleshooting. These logs may be requested by support to help diagnose issues.": "Экспортируйте журналы приложения для устранения неполадок. Эти журналы могут быть запрошены службой поддержки для помощи в диагностике проблем.",
   "Export Chat": "Экспорт Переписки",
+  "Export failed": "Экспорт не удался",
+  "Export Logs": "Экспорт журналов",
   "Export Selected Data": "Экспорт выбранных данных",
   "Exporting...": "Экспорт...",
   "Exports are for viewing only. Use Settings → Backup if you need a backup you can restore.": "Экспорт предназначен только для просмотра. Используйте Настройки → Резервное копирование, если вам нужна резервная копия, которую можно восстановить.",
