--- a/src/renderer/i18n/locales/zh-Hant/translation.json
+++ b/src/renderer/i18n/locales/zh-Hant/translation.json
@@ -26,6 +26,7 @@
   "Add your first MCP server": "新增您的第一個MCP伺服器",
   "advanced": "其他",
   "Advanced": "高級",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "高級圖片格式不支援。請轉換為 JPG 或 PNG 格式。",
   "Advanced Mode": "高級模式",
   "Advanced Settings": "進階設定",
   "AI Model Provider": "AI 模型提供者",
@@ -54,7 +55,6 @@
   "API Mode": "API 模式",
   "api path": "API 路徑",
   "API Path": "API 路徑",
-  "Advanced image formats are not supported. Please convert to JPG or PNG.": "高級圖片格式不支援。請轉換為 JPG 或 PNG 格式。",
   "Archive files are not supported. Please extract and upload individual files.": "壓縮檔不支援。請解壓縮並上傳個別檔案。",
   "Are you sure you want to delete the knowledge base": "您確定要刪除知識庫嗎",
   "Are you sure you want to delete this server?": "您確定要刪除這個伺服器嗎？",
@@ -211,6 +211,7 @@
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "部署 HTML 內容到 EdgeOne Pages 並取得可存取的公開 URL。",
   "Description": "描述",
   "Details": "詳情",
+  "Diagnostic Logs": "診斷日誌",
   "Disabled": "已停用",
   "display": "顯示",
   "Display": "顯示",
@@ -259,7 +260,10 @@
   "Explore (community)": "探索 (社群)",
   "Explore (official)": "探索 (official)",
   "export": "導出",
+  "Export application logs for troubleshooting. These logs may be requested by support to help diagnose issues.": "匯出應用程式日誌以用於疑難排解。支援人員可能會要求這些日誌，以協助診斷問題。",
   "Export Chat": "導出聊天記錄",
+  "Export failed": "匯出失敗",
+  "Export Logs": "匯出日誌",
   "Export Selected Data": "匯出選取的資料",
   "Exporting...": "正在匯出...",
   "Exports are for viewing only. Use Settings → Backup if you need a backup you can restore.": "匯出聊天記錄僅供查看，無法用作備份或匯入。如需備份，請至設定中進行備份。",
