--- a/src/renderer/i18n/locales/ar/translation.json
+++ b/src/renderer/i18n/locales/ar/translation.json
@@ -26,6 +26,7 @@
   "Add your first MCP server": "أضف أول خادم MCP لك",
   "advanced": "متقدم",
   "Advanced": "متقدم",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "تنسيقات الصور المتقدمة غير مدعومة. يرجى التحويل إلى JPG أو PNG.",
   "Advanced Mode": "وضع متقدم",
   "Advanced Settings": "إعدادات متقدمة",
   "AI Model Provider": "مقدم نموذج الذكاء الصناعي",
@@ -54,7 +55,6 @@
   "API Mode": "وضع API",
   "api path": "مسار API",
   "API Path": "مسار API",
-  "Advanced image formats are not supported. Please convert to JPG or PNG.": "تنسيقات الصور المتقدمة غير مدعومة. يرجى التحويل إلى JPG أو PNG.",
   "Archive files are not supported. Please extract and upload individual files.": "ملفات الأرشيف غير مدعومة. يرجى استخراج ورفع الملفات الفردية.",
   "Are you sure you want to delete the knowledge base": "هل أنت متأكد أنك تريد حذف قاعدة المعرفة؟",
   "Are you sure you want to delete this server?": "هل أنت متأكد أنك تريد حذف هذا الخادم؟",
@@ -211,6 +211,7 @@
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "نشر محتوى HTML إلى EdgeOne Pages والحصول على عنوان URL عام يمكن الوصول إليه.",
   "Description": "الوصف",
   "Details": "التفاصيل",
+  "Diagnostic Logs": "سجلات التشخيص",
   "Disabled": "معطل",
   "display": "العرض",
   "Display": "عرض",
@@ -259,7 +260,10 @@
   "Explore (community)": "استكشاف (مجتمع)",
   "Explore (official)": "استكشاف (رسمي)",
   "export": "تصدير",
+  "Export application logs for troubleshooting. These logs may be requested by support to help diagnose issues.": "تصدير سجلات التطبيق لاستكشاف الأخطاء وإصلاحها. قد يطلب الدعم هذه السجلات للمساعدة في تشخيص المشكلات.",
   "Export Chat": "تصدير المحادثة",
+  "Export failed": "فشل التصدير",
+  "Export Logs": "تصدير السجلات",
   "Export Selected Data": "تصدير البيانات المحددة",
   "Exporting...": "جارٍ التصدير...",
   "Exports are for viewing only. Use Settings → Backup if you need a backup you can restore.": "عمليات التصدير مخصصة للعرض فقط. استخدم الإعدادات ← النسخ الاحتياطي إذا كنت بحاجة إلى نسخة احتياطية يمكنك استعادتها.",
