--- a/src/renderer/i18n/locales/es/translation.json
+++ b/src/renderer/i18n/locales/es/translation.json
@@ -26,6 +26,7 @@
   "Add your first MCP server": "Añadir tu primer servidor MCP",
   "advanced": "Avanzado",
   "Advanced": "Avanzado",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "Los formatos de imagen avanzados no son compatibles. Por favor, convierta a JPG o PNG.",
   "Advanced Mode": "Modo avanzado",
   "Advanced Settings": "Ajustes avanzados",
   "AI Model Provider": "Proveedor del modelo de IA",
@@ -54,7 +55,6 @@
   "API Mode": "Modo de API",
   "api path": "Ruta de API",
   "API Path": "Ruta de API",
-  "Advanced image formats are not supported. Please convert to JPG or PNG.": "Los formatos de imagen avanzados no son compatibles. Por favor, convierta a JPG o PNG.",
   "Archive files are not supported. Please extract and upload individual files.": "Los archivos comprimidos no son compatibles. Por favor, extraiga y cargue los archivos individuales.",
   "Are you sure you want to delete the knowledge base": "¿Estás seguro de que quieres eliminar la base de conocimiento?",
   "Are you sure you want to delete this server?": "¿Está seguro de que quiere eliminar este servidor?",
@@ -211,6 +211,7 @@
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "Desplegar contenido HTML en EdgeOne Pages y obtener una URL pública accesible.",
   "Description": "Descripción",
   "Details": "Detalles",
+  "Diagnostic Logs": "THOUGHTS: The user wants to translate \"Diagnostic Logs\" to Spanish. This is a straightforward translation. The most common and accurate translation is \"Registros de diagnóstico\".Registros de diagnóstico",
   "Disabled": "Deshabilitado",
   "display": "mostrar",
   "Display": "Mostrar",
@@ -259,7 +260,10 @@
   "Explore (community)": "Explorar (comunidad)",
   "Explore (official)": "Explorar (oficial)",
   "export": "Exportar",
+  "Export application logs for troubleshooting. These logs may be requested by support to help diagnose issues.": "Exportar registros de la aplicación para solucionar problemas. Estos registros pueden ser solicitados por el soporte para ayudar a diagnosticar problemas.",
   "Export Chat": "Exportar chat",
+  "Export failed": "Exportación fallida",
+  "Export Logs": "Exportar Registros",
   "Export Selected Data": "Exportar datos seleccionados",
   "Exporting...": "Exportando...",
   "Exports are for viewing only. Use Settings → Backup if you need a backup you can restore.": "Las exportaciones son solo para visualización. Usa Ajustes → Copia de seguridad si necesitas una copia de seguridad que puedas restaurar.",
