--- a/src/renderer/i18n/locales/fr/translation.json
+++ b/src/renderer/i18n/locales/fr/translation.json
@@ -26,6 +26,7 @@
   "Add your first MCP server": "Ajouter votre premier serveur MCP",
   "advanced": "Avancé",
   "Advanced": "Avancé",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "Les formats d'image avancés ne sont pas pris en charge. Veuillez convertir en JPG ou PNG.",
   "Advanced Mode": "Mode Avancé",
   "Advanced Settings": "Paramètres avancés",
   "AI Model Provider": "Fournisseur de modèle IA",
@@ -54,7 +55,6 @@
   "API Mode": "Mode API",
   "api path": "Chemin de l'API",
   "API Path": "Chemin de l'API",
-  "Advanced image formats are not supported. Please convert to JPG or PNG.": "Les formats d'image avancés ne sont pas pris en charge. Veuillez convertir en JPG ou PNG.",
   "Archive files are not supported. Please extract and upload individual files.": "Les fichiers d'archive ne sont pas pris en charge. Veuillez extraire et télécharger les fichiers individuels.",
   "Are you sure you want to delete the knowledge base": "Voulez-vous vraiment supprimer la base de connaissances",
   "Are you sure you want to delete this server?": "Voulez-vous vraiment supprimer ce serveur ?",
@@ -211,6 +211,7 @@
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "Déployer du contenu HTML vers EdgeOne Pages et obtenir une URL publique accessible.",
   "Description": "Description",
   "Details": "Détails",
+  "Diagnostic Logs": "Carnets de diagnostic",
   "Disabled": "Désactivé",
   "display": "affichage",
   "Display": "Affichage",
@@ -259,7 +260,10 @@
   "Explore (community)": "Explorer (communauté)",
   "Explore (official)": "Explorer (officiel)",
   "export": "Exporter",
+  "Export application logs for troubleshooting. These logs may be requested by support to help diagnose issues.": "Exporter les journaux de l'application pour le dépannage. Ces journaux peuvent être demandés par le support pour aider à diagnostiquer les problèmes.",
   "Export Chat": "Exporter la Discussion",
+  "Export failed": "Exportation échouée",
+  "Export Logs": "C'est parti, je vais traduire le texte de l'anglais vers le français.\n\n**Français :**\nExporter les journaux",
   "Export Selected Data": "Exporter les données sélectionnées",
   "Exporting...": "Exportation...",
   "Exports are for viewing only. Use Settings → Backup if you need a backup you can restore.": "Les exportations sont uniquement destinées à la visualisation. Utilisez Paramètres → Sauvegarde si vous avez besoin d'une sauvegarde restaurable.",
