--- a/src/renderer/i18n/locales/ja/translation.json
+++ b/src/renderer/i18n/locales/ja/translation.json
@@ -26,6 +26,7 @@
   "Add your first MCP server": "最初のMCPサーバーを追加",
   "advanced": "高度",
   "Advanced": "高度",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "高度な画像形式はサポートされていません。JPG または PNG に変換してください。",
   "Advanced Mode": "高度モード",
   "Advanced Settings": "詳細設定",
   "AI Model Provider": "AIモデル提供者",
@@ -54,7 +55,6 @@
   "API Mode": "APIモード",
   "api path": "APIパス",
   "API Path": "API パス",
-  "Advanced image formats are not supported. Please convert to JPG or PNG.": "高度な画像形式はサポートされていません。JPG または PNG に変換してください。",
   "Archive files are not supported. Please extract and upload individual files.": "アーカイブファイルはサポートされていません。個々のファイルを展開してアップロードしてください。",
   "Are you sure you want to delete the knowledge base": "ナレッジベースを本当に削除しますか",
   "Are you sure you want to delete this server?": "このサーバーを削除してもよろしいですか？",
@@ -211,6 +211,7 @@
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "HTMLコンテンツをEdgeOne Pagesにデプロイし、アクセス可能な公開URLを取得する。",
   "Description": "説明",
   "Details": "詳細",
+  "Diagnostic Logs": "診断ログ",
   "Disabled": "無効",
   "display": "表示",
   "Display": "表示",
@@ -259,7 +260,10 @@
   "Explore (community)": "探索 (コミュニティ)",
   "Explore (official)": "探索 (公式)",
   "export": "エクスポート",
+  "Export application logs for troubleshooting. These logs may be requested by support to help diagnose issues.": "トラブルシューティングのため、アプリケーションログをエクスポートします。これらのログは、問題の診断を支援するためにサポートから要求される場合があります。",
   "Export Chat": "チャットをエクスポート",
+  "Export failed": "エクスポートに失敗しました",
+  "Export Logs": "ログをエクスポート",
   "Export Selected Data": "選択したデータをエクスポート",
   "Exporting...": "エクスポート中...",
   "Exports are for viewing only. Use Settings → Backup if you need a backup you can restore.": "エクスポートは閲覧専用です。復元可能なバックアップが必要な場合は、「設定」→「バックアップ」をご利用ください。",
