--- a/src/renderer/i18n/locales/nb-NO/translation.json
+++ b/src/renderer/i18n/locales/nb-NO/translation.json
@@ -26,6 +26,7 @@
   "Add your first MCP server": "Legg til din første MCP-server",
   "advanced": "Avansert",
   "Advanced": "Avansert",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "Avanserte bildeformater støttes ikke. Vennligst konverter til JPG eller PNG.",
   "Advanced Mode": "Avansert modus",
   "Advanced Settings": "Avanserte innstillinger",
   "AI Model Provider": "KI-modelltilbyder",
@@ -54,7 +55,6 @@
   "API Mode": "API-modus",
   "api path": "API-sti",
   "API Path": "API-Sti",
-  "Advanced image formats are not supported. Please convert to JPG or PNG.": "Avanserte bildeformater støttes ikke. Vennligst konverter til JPG eller PNG.",
   "Archive files are not supported. Please extract and upload individual files.": "Arkivfiler støttes ikke. Vennligst pakk ut og last opp individuelle filer.",
   "Are you sure you want to delete the knowledge base": "Er du sikker på at du vil slette kunnskapsbasen",
   "Are you sure you want to delete this server?": "Er du sikker på at du vil slette denne serveren?",
@@ -211,6 +211,7 @@
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "Utplassere HTML-innhold til EdgeOne Pages og oppnå en tilgjengelig offentlig URL.",
   "Description": "Beskrivelse",
   "Details": "Detaljer",
+  "Diagnostic Logs": "Diagnostiske logger",
   "Disabled": "Deaktivert",
   "display": "visning",
   "Display": "Vis",
@@ -259,7 +260,10 @@
   "Explore (community)": "Utforsk (fellesskap)",
   "Explore (official)": "Utforsk (official)",
   "export": "Eksporter",
+  "Export application logs for troubleshooting. These logs may be requested by support to help diagnose issues.": "Eksporter applikasjonslogger for feilsøking. Disse loggene kan bli etterspurt av brukerstøtte for å hjelpe med å diagnostisere problemer.",
   "Export Chat": "Eksporter chat",
+  "Export failed": "Eksport mislyktes",
+  "Export Logs": "Eksporter logger",
   "Export Selected Data": "Eksporter valgte data",
   "Exporting...": "Eksporterer...",
   "Exports are for viewing only. Use Settings → Backup if you need a backup you can restore.": "Eksport er kun for visning. Bruk Innstillinger → Sikkerhetskopi hvis du trenger en sikkerhetskopi du kan gjenopprette.",
