--- a/src/renderer/i18n/locales/pt-PT/translation.json
+++ b/src/renderer/i18n/locales/pt-PT/translation.json
@@ -26,6 +26,7 @@
   "Add your first MCP server": "Adicione o seu primeiro servidor MCP",
   "advanced": "avançado",
   "Advanced": "Avançado",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "Formatos de imagem avançados não são suportados. Por favor, converta para JPG ou PNG.",
   "Advanced Mode": "Modo Avançado",
   "Advanced Settings": "Definições Avançadas",
   "AI Model Provider": "Fornecedor do Modelo AI",
@@ -54,7 +55,6 @@
   "API Mode": "Modo API",
   "api path": "caminho da API",
   "API Path": "Caminho da API",
-  "Advanced image formats are not supported. Please convert to JPG or PNG.": "Formatos de imagem avançados não são suportados. Por favor, converta para JPG ou PNG.",
   "Archive files are not supported. Please extract and upload individual files.": "Ficheiros de arquivo não são suportados. Por favor, extraia e carregue os ficheiros individuais.",
   "Are you sure you want to delete the knowledge base": "Tem a certeza que pretende eliminar a base de conhecimento",
   "Are you sure you want to delete this server?": "Tem a certeza que quer apagar este servidor?",
@@ -211,6 +211,7 @@
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "Publicar conteúdo HTML para EdgeOne Pages e obter um URL público acessível.",
   "Description": "Descrição",
   "Details": "Detalhes",
+  "Diagnostic Logs": "Registos de diagnóstico",
   "Disabled": "Desabilitado",
   "display": "Exibir",
   "Display": "Exibir",
@@ -258,7 +259,10 @@
   "Explore (community)": "Explorar (comunidade)",
   "Explore (official)": "Explorar (oficial)",
   "export": "Exportar",
+  "Export application logs for troubleshooting. These logs may be requested by support to help diagnose issues.": "Exportar registos da aplicação para resolução de problemas. Estes registos podem ser solicitados pelo suporte para ajudar a diagnosticar problemas.",
   "Export Chat": "Exportar Chat",
+  "Export failed": "Exportação falhou",
+  "Export Logs": "Exportar Registos",
   "Export Selected Data": "Exportar Dados Selecionados",
   "Exporting...": "A exportar...",
   "Exports are for viewing only. Use Settings → Backup if you need a backup you can restore.": "As exportações são apenas para visualização. Utilize Definições → Cópia de Segurança se precisar de uma cópia de segurança que possa restaurar.",
