--- a/src/renderer/i18n/locales/sv/translation.json
+++ b/src/renderer/i18n/locales/sv/translation.json
@@ -26,6 +26,7 @@
   "Add your first MCP server": "Lägg till din första MCP server",
   "advanced": "Avancerat",
   "Advanced": "Avancerad",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "Avancerade bildformat stöds inte. Vänligen konvertera till JPG eller PNG.",
   "Advanced Mode": "Avancerat läge",
   "Advanced Settings": "Avancerade inställningar",
   "AI Model Provider": "AI-modellleverantör",
@@ -54,7 +55,6 @@
   "API Mode": "API-läge",
   "api path": "API-sökväg",
   "API Path": "API Sökväg",
-  "Advanced image formats are not supported. Please convert to JPG or PNG.": "Avancerade bildformat stöds inte. Vänligen konvertera till JPG eller PNG.",
   "Archive files are not supported. Please extract and upload individual files.": "Arkivfiler stöds inte. Vänligen packa upp och ladda upp enskilda filer.",
   "Are you sure you want to delete the knowledge base": "Är du säker på att du vill ta bort kunskapsbasen",
   "Are you sure you want to delete this server?": "Är du säker på att du vill radera den här servern?",
@@ -211,6 +211,7 @@
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "Distribuera HTML-innehåll till EdgeOne Pages och erhålla en tillgänglig offentlig URL.",
   "Description": "Beskrivning",
   "Details": "Detaljer",
+  "Diagnostic Logs": "Diagnostiska loggar",
   "Disabled": "Inaktiverad",
   "display": "visa",
   "Display": "Visa",
@@ -259,7 +260,10 @@
   "Explore (community)": "Utforska (gemenskap)",
   "Explore (official)": "Utforska (official)",
   "export": "Exportera",
+  "Export application logs for troubleshooting. These logs may be requested by support to help diagnose issues.": "Exportera programloggar för felsökning. Dessa loggar kan efterfrågas av supporten för att diagnostisera problem.",
   "Export Chat": "Exportera chatt",
+  "Export failed": "Exporten misslyckades",
+  "Export Logs": "Exportera loggar",
   "Export Selected Data": "Exportera vald data",
   "Exporting...": "Exporterar...",
   "Exports are for viewing only. Use Settings → Backup if you need a backup you can restore.": "Exporter är endast för visning. Använd Inställningar → Säkerhetskopiering om du behöver en säkerhetskopia som du kan återställa.",
