--- a/src/renderer/i18n/locales/zh-Hans/translation.json
+++ b/src/renderer/i18n/locales/zh-Hans/translation.json
@@ -26,6 +26,7 @@
   "Add your first MCP server": "添加您的第一个 MCP 服务器",
   "advanced": "其他",
   "Advanced": "高级",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "高级图片格式不支持。请转换为 JPG 或 PNG 格式。",
   "Advanced Mode": "高级模式",
   "Advanced Settings": "高级设置",
   "AI Model Provider": "AI 模型提供方",
@@ -54,7 +55,6 @@
   "API Mode": "API 模式",
   "api path": "API 路径",
   "API Path": "API 路径",
-  "Advanced image formats are not supported. Please convert to JPG or PNG.": "高级图片格式不支持。请转换为 JPG 或 PNG 格式。",
   "Archive files are not supported. Please extract and upload individual files.": "不支持压缩文件。请解压并上传单个文件。",
   "Are you sure you want to delete the knowledge base": "你确定要删除知识库吗",
   "Are you sure you want to delete this server?": "你确定要删除这个服务器吗？",
@@ -211,6 +211,7 @@
   "Deploy HTML content to EdgeOne Pages and obtaining an accessible public URL.": "部署 HTML 内容到 EdgeOne Pages 并获取一个可访问的公共 URL。",
   "Description": "描述",
   "Details": "详情",
+  "Diagnostic Logs": "诊断日志",
   "Disabled": "禁用",
   "display": "显示",
   "Display": "显示",
@@ -259,7 +260,10 @@
   "Explore (community)": "探索 (社区)",
   "Explore (official)": "探索 (官方)",
   "export": "导出",
+  "Export application logs for troubleshooting. These logs may be requested by support to help diagnose issues.": "导出应用日志用于故障排除。支持团队可能会要求提供这些日志以帮助诊断问题。",
   "Export Chat": "导出聊天记录",
+  "Export failed": "导出失败",
+  "Export Logs": "导出日志",
   "Export Selected Data": "导出勾选数据",
   "Exporting...": "正在导出...",
   "Exports are for viewing only. Use Settings → Backup if you need a backup you can restore.": "导出聊天记录仅供查看，无法用于备份或导入。如需备份，请在设置中执行备份。",
