feat: optimize message attachment display and increase upload limit to 20 (#564)

--- a/src/renderer/i18n/locales/ar/translation.json
+++ b/src/renderer/i18n/locales/ar/translation.json
@@ -172,6 +172,7 @@
   "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "خدمة تحليل المستندات السحابية، تدعم ملفات PDF وOffice وEPUB والعديد من أنواع الملفات الأخرى. تستهلك نقاط معالجة.",
   "Code Search": "بحث في الكود",
   "Collapse": "طي",
+  "Collapse attachments": "طي المرفقات",
   "Coming soon": "قريباً",
   "Command": "أمر",
   "Compacting conversation...": "يجري ضغط المحادثة...",
@@ -734,6 +735,7 @@
   "Share with Chatbox": "شارك مع Chatbox",
   "Show": "عرض",
   "Show all ({{x}})": "عرض الكل ({{x}})",
+  "Show all attachments": "عرض جميع المرفقات",
   "Show Copilots in New Session": "إظهار المساعدين في محادثة جديدة",
   "show first token latency": "عرض التأخير الأول للرمز",
   "Show History": "عرض السجل",
