--- a/src/renderer/i18n/locales/de/translation.json
+++ b/src/renderer/i18n/locales/de/translation.json
@@ -172,6 +172,7 @@
   "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "Cloud-basierter Dokumenten-Parsing-Dienst, unterstützt PDF-, Office-Dateien, EPUB und viele andere Dateitypen. Verbraucht Rechenpunkte.",
   "Code Search": "Code-Suche",
   "Collapse": "Reduzieren",
+  "Collapse attachments": "Anhänge einklappen",
   "Coming soon": "Demnächst",
   "Command": "Befehl",
   "Compacting conversation...": "Konversation wird komprimiert...",
@@ -735,6 +736,7 @@
   "Share with Chatbox": "Mit Chatbox teilen",
   "Show": "Anzeigen",
   "Show all ({{x}})": "Alle anzeigen ({{x}})",
+  "Show all attachments": "Alle Anhänge anzeigen",
   "Show Copilots in New Session": "Copilots in neuer Sitzung anzeigen",
   "show first token latency": "Erste Token-Verzögerung anzeigen",
   "Show History": "Verlauf anzeigen",
