--- a/src/renderer/i18n/locales/en/translation.json
+++ b/src/renderer/i18n/locales/en/translation.json
@@ -147,6 +147,7 @@
   "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.",
   "Code Search": "Code Search",
   "Collapse": "Collapse",
+  "Collapse attachments": "Collapse attachments",
   "Command": "Command",
   "Compacting conversation...": "Compacting conversation...",
   "Compacting...": "Compacting...",
@@ -659,6 +660,7 @@
   "Share with Chatbox": "Share with Chatbox",
   "Show": "Show",
   "Show all ({{x}})": "Show all ({{x}})",
+  "Show all attachments": "Show all attachments",
   "Show Copilots in New Session": "Show Copilots in New Session",
   "show first token latency": "show first token latency",
   "Show History": "Show History",
