--- a/src/renderer/i18n/locales/es/translation.json
+++ b/src/renderer/i18n/locales/es/translation.json
@@ -172,6 +172,7 @@
   "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "Servicio de análisis de documentos basado en la nube, compatible con archivos PDF, de Office, EPUB y muchos otros tipos de archivo. Consume puntos de cómputo.",
   "Code Search": "Búsqueda de Código",
   "Collapse": "Contraer",
+  "Collapse attachments": "Contraer adjuntos",
   "Coming soon": "Próximamente",
   "Command": "Comando",
   "Compacting conversation...": "Compactando conversación...",
@@ -734,6 +735,7 @@
   "Share with Chatbox": "Compartir con Chatbox",
   "Show": "Mostrar",
   "Show all ({{x}})": "Mostrar todo ({{x}})",
+  "Show all attachments": "Mostrar todos los adjuntos",
   "Show Copilots in New Session": "Mostrar Copilots en Nueva Sesión",
   "show first token latency": "Mostrar latencia del primer token",
   "Show History": "Mostrar historial",
