--- a/src/renderer/i18n/locales/fr/translation.json
+++ b/src/renderer/i18n/locales/fr/translation.json
@@ -172,6 +172,7 @@
   "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "Service d'analyse de documents basé sur le cloud, prend en charge les fichiers PDF, Office, EPUB et de nombreux autres types de fichiers. Consomme des points de calcul.",
   "Code Search": "Recherche de code",
   "Collapse": "Réduire",
+  "Collapse attachments": "Réduire les pièces jointes",
   "Coming soon": "Bientôt disponible",
   "Command": "Commande",
   "Compacting conversation...": "Compactage de la conversation...",
@@ -735,6 +736,7 @@
   "Share with Chatbox": "Partager avec Chatbox",
   "Show": "Afficher",
   "Show all ({{x}})": "Afficher tout ({{x}})",
+  "Show all attachments": "Afficher toutes les pièces jointes",
   "Show Copilots in New Session": "Afficher les Copilots dans une nouvelle session",
   "show first token latency": "Afficher la latence du premier token",
   "Show History": "Afficher l'historique",
