--- a/src/renderer/i18n/locales/it-IT/translation.json
+++ b/src/renderer/i18n/locales/it-IT/translation.json
@@ -171,6 +171,7 @@
   "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "Servizio di analisi documenti basato su cloud, supporta PDF, file Office, EPUB e molti altri tipi di file. Consuma punti di calcolo.",
   "Code Search": "Ricerca codice",
   "Collapse": "Comprimi",
+  "Collapse attachments": "Comprimi allegati",
   "Coming soon": "Prossimamente",
   "Command": "Comando",
   "Compacting conversation...": "Compattamento della conversazione...",
@@ -733,6 +734,7 @@
   "Share with Chatbox": "Condividi con Chatbox",
   "Show": "Mostra",
   "Show all ({{x}})": "Mostra tutti ({{x}})",
+  "Show all attachments": "Mostra tutti gli allegati",
   "Show Copilots in New Session": "Mostra Copilot nella nuova sessione",
   "show first token latency": "Mostra latenza del primo token",
   "Show History": "Mostra cronologia",
