--- a/src/renderer/i18n/locales/ja/translation.json
+++ b/src/renderer/i18n/locales/ja/translation.json
@@ -172,6 +172,7 @@
   "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "クラウドベースのドキュメント解析サービスで、PDF、Officeファイル、EPUB、その他多くのファイル形式に対応しています。コンピューティングポイントを消費します。",
   "Code Search": "コード検索",
   "Collapse": "折りたたむ",
+  "Collapse attachments": "添付ファイルを折りたたむ",
   "Coming soon": "近日公開",
   "Command": "コマンド",
   "Compacting conversation...": "会話を圧縮中...",
@@ -735,6 +736,7 @@
   "Share with Chatbox": "チャットボックスで共有",
   "Show": "表示",
   "Show all ({{x}})": "すべて表示 ({{x}})",
+  "Show all attachments": "すべての添付ファイルを表示",
   "Show Copilots in New Session": "新しいセッションでコパイロットを表示",
   "show first token latency": "最初のトークンの遅延を表示",
   "Show History": "履歴を表示",
