--- a/src/renderer/i18n/locales/ko/translation.json
+++ b/src/renderer/i18n/locales/ko/translation.json
@@ -172,6 +172,7 @@
   "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "클라우드 기반 문서 파싱 서비스로, PDF, Office 파일, EPUB 및 다양한 기타 파일 형식을 지원합니다. 컴퓨팅 포인트를 소모합니다.",
   "Code Search": "코드 검색",
   "Collapse": "축소",
+  "Collapse attachments": "첨부 파일 접기",
   "Coming soon": "곧 출시 예정",
   "Command": "명령",
   "Compacting conversation...": "대화 압축 중...",
@@ -735,6 +736,7 @@
   "Share with Chatbox": "Chatbox와 공유",
   "Show": "표시",
   "Show all ({{x}})": "모두 보기 ({{x}})",
+  "Show all attachments": "모든 첨부 파일 보기",
   "Show Copilots in New Session": "새 대화에서 코파일럿 표시",
   "show first token latency": "첫 토큰 지연 표시",
   "Show History": "기록 보기",
