--- a/src/renderer/i18n/locales/nb-NO/translation.json
+++ b/src/renderer/i18n/locales/nb-NO/translation.json
@@ -172,6 +172,7 @@
   "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "Skybasert dokumentparseringstjeneste, støtter PDF, Office-filer, EPUB og mange andre filtyper. Forbruker beregningspoeng.",
   "Code Search": "Kodesøk",
   "Collapse": "Skjul",
+  "Collapse attachments": "Fold sammen vedlegg",
   "Coming soon": "Kommer snart",
   "Command": "Kommando",
   "Compacting conversation...": "Komprimerer samtale...",
@@ -734,6 +735,7 @@
   "Share with Chatbox": "Del med Chatbox",
   "Show": "Vis",
   "Show all ({{x}})": "Vis alle ({{x}})",
+  "Show all attachments": "Vis alle vedlegg",
   "Show Copilots in New Session": "Vis Medpiloter i ny økt",
   "show first token latency": "Vis første token-forsinkelse",
   "Show History": "Vis historikk",
