--- a/src/renderer/i18n/locales/pt-PT/translation.json
+++ b/src/renderer/i18n/locales/pt-PT/translation.json
@@ -173,6 +173,7 @@
   "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "Serviço de análise de documentos baseado na nuvem, suporta ficheiros PDF, Office, EPUB e muitos outros tipos de ficheiro. Consome pontos de computação.",
   "Code Search": "Pesquisa de Código",
   "Collapse": "Colapsar",
+  "Collapse attachments": "Recolher anexos",
   "Coming soon": "Em breve",
   "Command": "Comando",
   "Compacting conversation...": "A compactar conversa...",
@@ -735,6 +736,7 @@
   "Share with Chatbox": "Partilhar com Chatbox",
   "Show": "Mostrar",
   "Show all ({{x}})": "Mostrar tudo ({{x}})",
+  "Show all attachments": "Mostrar todos os anexos",
   "Show Copilots in New Session": "Mostrar Copilots em Nova Sessão",
   "show first token latency": "Mostrar latência do primeiro token",
   "Show History": "Mostrar Histórico",
