--- a/src/renderer/i18n/locales/ru/translation.json
+++ b/src/renderer/i18n/locales/ru/translation.json
@@ -172,6 +172,7 @@
   "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "Облачный сервис анализа документов, поддерживает файлы PDF, Office, EPUB и многие другие типы файлов. Потребляет вычислительные баллы.",
   "Code Search": "Поиск кода",
   "Collapse": "Свернуть",
+  "Collapse attachments": "Свернуть вложения",
   "Coming soon": "Скоро будет",
   "Command": "Команда",
   "Compacting conversation...": "Сжатие диалога...",
@@ -735,6 +736,7 @@
   "Share with Chatbox": "Поделиться с Chatbox",
   "Show": "Показать",
   "Show all ({{x}})": "Показать все ({{x}})",
+  "Show all attachments": "Показать все вложения",
   "Show Copilots in New Session": "Показывать Копилотов в новой беседе",
   "show first token latency": "Показать задержку первого токена",
   "Show History": "Показать историю",
