--- a/src/renderer/i18n/locales/sv/translation.json
+++ b/src/renderer/i18n/locales/sv/translation.json
@@ -172,6 +172,7 @@
   "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "Molnbaserad dokumentanalystjänst, stöder PDF, Office-filer, EPUB och många andra filtyper. Förbrukar beräkningspoäng.",
   "Code Search": "Kodsökning",
   "Collapse": "Minimera",
+  "Collapse attachments": "Fäll ihop bilagor",
   "Coming soon": "Kommer snart",
   "Command": "Kommando",
   "Compacting conversation...": "Kompakterar konversation...",
@@ -734,6 +735,7 @@
   "Share with Chatbox": "Dela med Chatbox",
   "Show": "Visa",
   "Show all ({{x}})": "Visa alla ({{x}})",
+  "Show all attachments": "Visa alla bilagor",
   "Show Copilots in New Session": "Visa Copilots i ny session",
   "show first token latency": "Visa första token fördröjning",
   "Show History": "Visa historik",
