--- a/src/renderer/i18n/locales/zh-Hans/translation.json
+++ b/src/renderer/i18n/locales/zh-Hans/translation.json
@@ -171,6 +171,7 @@
   "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "基于Chatbox AI的文档解析服务，支持 PDF、Office 文件、EPUB 和许多其他文件类型。消耗计算点数。",
   "Code Search": "代码搜索",
   "Collapse": "折叠",
+  "Collapse attachments": "收起附件",
   "Coming soon": "敬请期待",
   "Command": "命令",
   "Compacting conversation...": "正在压缩对话...",
@@ -741,6 +742,7 @@
   "Share with Chatbox": "与Chatbox分享",
   "Show": "显示",
   "Show all ({{x}})": "显示全部 ({{x}})",
+  "Show all attachments": "显示所有附件",
   "Show Copilots in New Session": "在新对话中显示我的搭档",
   "show first token latency": "显示首字耗时",
   "Show History": "显示历史",
