--- a/src/renderer/i18n/locales/zh-Hant/translation.json
+++ b/src/renderer/i18n/locales/zh-Hant/translation.json
@@ -170,6 +170,7 @@
   "Cloud-based document parsing service, supports PDF, Office files, EPUB and many other file types. Consumes compute points.": "雲端文件解析服務，支援 PDF、Office 文件、EPUB 及許多其他檔案類型。消耗運算點數。",
   "Code Search": "程式碼搜尋",
   "Collapse": "收起",
+  "Collapse attachments": "收起附件",
   "Coming soon": "請耐心等待喔",
   "Command": "指令",
   "Compacting conversation...": "正在壓縮對話...",
@@ -736,6 +737,7 @@
   "Share with Chatbox": "與Chatbox分享",
   "Show": "顯示",
   "Show all ({{x}})": "顯示全部 ({{x}})",
+  "Show all attachments": "顯示所有附件",
   "Show Copilots in New Session": "在新對話中顯示 Copilots",
   "show first token latency": "顯示首字耗時",
   "Show History": "顯示歷史",
